Prepare for release 0.8.0.